@@ -18,7 +18,8 @@ rem                   Required to run the with the "debug" argument.
 rem ---------------------------------------------------------------------------
 
 set _RUNJAVA=java
-set MYCOLLAB_OPTS=-noverify -server -Xms394m -Xmx768m -XX:NewSize=128m -XX:+DisableExplicitGC -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
+set MYCOLLAB_PORT=8080
+set MYCOLLAB_OPTS=-noverify -Xms394m -Xmx768m
 
 rem Suppress Terminate batch job on CTRL+C
 if not ""%1"" == ""run"" goto mainEntry
